# cargo-license-template

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: error.rs  license.rs  main.rs
